==> hazy1k/STM32-Quick-Start-Guide/Totoal-Reference-Material/参考代码/野火指南者F103/HAL库/显示BMP图片（图片放SD卡）/User/lcd/bsp_ili9341_lcd.c <==
#include "./lcd/bsp_ili9341_lcd.h"
#include "./font/fonts.h"

static void ILI9341_GPIO_Config ( void )
{
	GPIO_InitTypeDef GPIO_Initure;
  
      /* Enable GPIOs clock */
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOE_CLK_ENABLE();
  __HAL_RCC_GPIOF_CLK_ENABLE();
  __HAL_RCC_GPIOG_CLK_ENABLE();
  __HAL_RCC_FSMC_CLK_ENABLE();			//使能FSMC时钟
  
    /* Common GPIO configuration */
  GPIO_Initure.Mode      = GPIO_MODE_OUTPUT_PP;  //推挽输出
  GPIO_Initure.Pull      = GPIO_PULLUP;
  GPIO_Initure.Speed     = GPIO_SPEED_FREQ_HIGH;

  
  GPIO_Initure.Pin=GPIO_PIN_12;
	HAL_GPIO_Init(GPIOD,&GPIO_Initure);
  
  //初始化复位引脚G11
	GPIO_Initure.Pin=GPIO_PIN_1;
	HAL_GPIO_Init(GPIOE,&GPIO_Initure);
  
  GPIO_Initure.Mode=GPIO_MODE_AF_PP; 
//  GPIO_Initure.Alternate=GPIO_AF12_FSMC;	//复用为FSMC
  
	//初始化PD0,1,4,5,8,9,10,14,15
	GPIO_Initure.Pin=GPIO_PIN_0|GPIO_PIN_1|GPIO_PIN_4|GPIO_PIN_5|GPIO_PIN_7|GPIO_PIN_8|\
					         GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_14|GPIO_PIN_15; 
  HAL_GPIO_Init(GPIOD, &GPIO_Initure);
  
  	//初始化PE2,7,8,9,10,11,12,13,14,15
	GPIO_Initure.Pin=  GPIO_PIN_7|GPIO_PIN_8|GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_11|\
                     GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15;
	HAL_GPIO_Init(GPIOE,&GPIO_Initure);
	


//	/* 使能FSMC对应相应管脚时钟*/
//	RCC_APB2PeriphClockCmd ( 	
//													/*控制信号*/
//													ILI9341_CS_CLK|ILI9341_DC_CLK|ILI9341_WR_CLK|
//													ILI9341_RD_CLK	|ILI9341_BK_CLK|ILI9341_RST_CLK|
//													/*数据信号*/
//													ILI9341_D0_CLK|ILI9341_D1_CLK|	ILI9341_D2_CLK | 
//													ILI9341_D3_CLK | ILI9341_D4_CLK|ILI9341_D5_CLK|
//													ILI9341_D6_CLK | ILI9341_D7_CLK|ILI9341_D8_CLK|
//													ILI9341_D9_CLK | ILI9341_D10_CLK|ILI9341_D11_CLK|
//													ILI9341_D12_CLK | ILI9341_D13_CLK|ILI9341_D14_CLK|
//													ILI9341_D15_CLK	, ENABLE );
//		
//	
//	/* 配置FSMC相对应的数据线,FSMC-D0~D15 */	
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_InitStructure.GPIO_Mode =  GPIO_Mode_AF_PP;
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D0_PIN;
//	GPIO_Init ( ILI9341_D0_PORT, & GPIO_InitStructure );

//	GPIO_InitStructure.GPIO_Pin = ILI9341_D1_PIN;
//	GPIO_Init ( ILI9341_D1_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D2_PIN;
//	GPIO_Init ( ILI9341_D2_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D3_PIN;
//	GPIO_Init ( ILI9341_D3_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D4_PIN;
//	GPIO_Init ( ILI9341_D4_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D5_PIN;
//	GPIO_Init ( ILI9341_D5_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D6_PIN;
//	GPIO_Init ( ILI9341_D6_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D7_PIN;
//	GPIO_Init ( ILI9341_D7_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D8_PIN;
//	GPIO_Init ( ILI9341_D8_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D9_PIN;
//	GPIO_Init ( ILI9341_D9_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D10_PIN;
//	GPIO_Init ( ILI9341_D10_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D11_PIN;
//	GPIO_Init ( ILI9341_D11_PORT, & GPIO_InitStructure );

//	GPIO_InitStructure.GPIO_Pin = ILI9341_D12_PIN;
//	GPIO_Init ( ILI9341_D12_PORT, & GPIO_InitStructure );	
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D13_PIN;
//	GPIO_Init ( ILI9341_D13_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D14_PIN;
//	GPIO_Init ( ILI9341_D14_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_D15_PIN;
//	GPIO_Init ( ILI9341_D15_PORT, & GPIO_InitStructure );
//	

//	
//	/* 配置FSMC相对应的控制线
//	 * FSMC_NOE   :LCD-RD
//	 * FSMC_NWE   :LCD-WR
//	 * FSMC_NE1   :LCD-CS
//	 * FSMC_A16  	:LCD-DC
//	 */
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_InitStructure.GPIO_Mode =  GPIO_Mode_AF_PP;
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_RD_PIN; 
//	GPIO_Init (ILI9341_RD_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_WR_PIN; 
//	GPIO_Init (ILI9341_WR_PORT, & GPIO_InitStructure );
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_CS_PIN; 
//	GPIO_Init ( ILI9341_CS_PORT, & GPIO_InitStructure );  
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_DC_PIN; 
//	GPIO_Init ( ILI9341_DC_PORT, & GPIO_InitStructure );
//	

//  /* 配置LCD复位RST控制管脚*/
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_RST_PIN; 
//	GPIO_Init ( ILI9341_RST_PORT, & GPIO_InitStructure );
//	
//	
//	/* 配置LCD背光控制管脚BK*/
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;  
//	
//	GPIO_InitStructure.GPIO_Pin = ILI9341_BK_PIN; 
//	GPIO_Init ( ILI9341_BK_PORT, & GPIO_InitStructure );
}

static void ILI9341_FSMC_Config ( void )
{
	SRAM_Handler.Instance = FSMC_NORSRAM_DEVICE;
   SRAM_Handler.Extended = FSMC_NORSRAM_EXTENDED_DEVICE;
  
  /* SRAM device configuration */  
  Timing.AddressSetupTime      = 0x00;
  Timing.AddressHoldTime       = 0x00;
  Timing.DataSetupTime         = 0x08;
  Timing.BusTurnAroundDuration = 0x00;
  Timing.CLKDivision           = 0x00;
  Timing.DataLatency           = 0x00;
  Timing.AccessMode            = FSMC_ACCESS_MODE_B;
 
  SRAM_Handler.Init.NSBank=FSMC_Bank1_NORSRAMx    ;     					        //使用NE4
	SRAM_Handler.Init.DataAddressMux=FSMC_DATA_ADDRESS_MUX_DISABLE; 	//地址/数据线不复用
	SRAM_Handler.Init.MemoryType=FSMC_MEMORY_TYPE_NOR;   				       //NOR
	SRAM_Handler.Init.MemoryDataWidth=FSMC_NORSRAM_MEM_BUS_WIDTH_16; 	//16位数据宽度
	SRAM_Handler.Init.BurstAccessMode=FSMC_BURST_ACCESS_MODE_DISABLE; //是否使能突发访问,仅对同步突发存储器有效,此处未用到
	SRAM_Handler.Init.WaitSignalPolarity=FSMC_WAIT_SIGNAL_POLARITY_LOW;//等待信号的极性,仅在突发模式访问下有用
	SRAM_Handler.Init.WaitSignalActive=FSMC_WAIT_TIMING_BEFORE_WS;   	//存储器是在等待周期之前的一个时钟周期还是等待周期期间使能NWAIT
	SRAM_Handler.Init.WriteOperation=FSMC_WRITE_OPERATION_ENABLE;    	//存储器写使能
	SRAM_Handler.Init.WaitSignal=FSMC_WAIT_SIGNAL_DISABLE;           	//等待使能位,此处未用到
	SRAM_Handler.Init.ExtendedMode=FSMC_EXTENDED_MODE_DISABLE;        	//读写使用相同的时序
	SRAM_Handler.Init.AsynchronousWait=FSMC_ASYNCHRONOUS_WAIT_DISABLE;	//是否使能同步传输模式下的等待信号,此处未用到
	SRAM_Handler.Init.WriteBurst=FSMC_WRITE_BURST_DISABLE;           	  //禁止突发写
  
  /* SRAM controller initialization */
   ILI9341_GPIO_Config();
  HAL_SRAM_Init(& SRAM_Handler, &Timing, &Timing);
		
}

void  ILI9341_BackLed_Control ( FunctionalState enumState )
{
	if ( enumState )
  {
    digitalL( GPIOD, GPIO_PIN_12);	
  }
	else
  {
    digitalH( GPIOD, GPIO_PIN_12);
  }		
}

void ILI9341_Rst( void )
{			
	digitalL( GPIOE,GPIO_PIN_1);	 //低电平复位

	ILI9341_Delay ( 0xAFF ); 						   

	digitalH( GPIOE,GPIO_PIN_1);		 	 

	ILI9341_Delay ( 0xAFF ); 	 	
	
}

static uint16_t ILI9341_Read_PixelData ( void )	
{	
	uint16_t usRG=0, usB=0 ;

	
	ILI9341_Write_Cmd ( 0x2E );   /* 读数据 */
	//去掉前一次读取结果
	ILI9341_Read_Data (); 	      /*FIRST READ OUT DUMMY DATA*/
	
	//获取红色通道与绿色通道的值
	usRG = ILI9341_Read_Data ();  	/*READ OUT RED AND GREEN DATA  */
	usB = ILI9341_Read_Data ();  		/*READ OUT BLUE DATA*/

  return ( (usRG&0xF800)| ((usRG<<3)&0x7E0) | (usB>>11) );
}
